--- a/MySQL/docs/数据库的事务隔离级别总结.md
+++ b/MySQL/docs/数据库的事务隔离级别总结.md
@@ -47,6 +47,17 @@
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20201130163023206.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MzIwNzAyNQ==,size_16,color_FFFFFF,t_70)
 
+MySQL8.0查询和设置隔离级别：
+
+```mysql
+select @@global.transaction_isolation, @@transaction_isolation;  // 查询隔离级别
+set global/session transaction isolation level REPEATABLE READ;		// 设置隔离级别
+// 语法如下
+SET [SESSION | GLOBAL] TRANSACTION ISOLATION LEVEL {READ UNCOMMITTED | READ COMMITTED | REPEATABLE READ | SERIALIZABLE}
+```
+
+
+
 ### 参考文章：
 
  - [https://blog.csdn.net/fuzhongmin05/article/details/91126936](https://blog.csdn.net/fuzhongmin05/article/details/91126936)
