--- a/MySQL/docs/数据库的事务隔离级别总结.md
+++ b/MySQL/docs/数据库的事务隔离级别总结.md
@@ -30,7 +30,7 @@
 当前事务**先进行了一次数据读取**，然后**再次读取到的数据是别的事务修改成功的数据**，导致两次读取到的数据不匹配。
 
 #### 3. 幻读
-当前事务读第一次取到的数据比后来读取到数据条目不一致。
+当某个事务在读取某个范围内的记录时，另外一个事务又在该范围内插入了新的记录，当之前的事务再次读取该范围的记录时，会产生幻行。
 
 
 `“脏读”、“不可重复读”和“幻读”`，其实都是数据库读一致性问题，必须由数据库提供一定的事务隔离机制来解决。数据库实现事务隔离的方式，基本上可分为以下两种：
@@ -40,9 +40,9 @@
 
 
 ### 四种隔离级别
-- `Read uncomitted (读未提交)`：最低级别，以上问题均无法解决.
-- `Read committed (读已提交)`：读已提交，可避免脏读情况发生。
-- `Repeatable Read（可重复读）`：确保事务可以多次从一个字段中读取相同的值，在此事务持续期间，禁止其他事务对此字段的更新，可以避免脏读和不可重复读，仍会出现幻读问题。
+- `Read uncomitted (读未提交)`：最低级别，以上问题均无法解决。**事务中的修改即使没有提交，对其它事务也都是可见的。**
+- `Read committed (读已提交)`：读已提交，可避免脏读情况发生。**一个事务从开始直到提交之前，所做的任何修改对其它事务都是不可见的。**也可以叫做不可重复读，因为两次执行同样的查询，可能会得到不一样的结果。
+- `Repeatable Read（可重复读）`：保证了在同一个事务中多次读取同样记录的结果是一致的。可以避免脏读和不可重复读，仍会出现幻读问题。可重复读是MySQL默认的事务隔离级别。
 - `Serializable （串行化）`：最严格的事务隔离级别，要求所有事务被串行执行，不能并发执行，可避免脏读、不可重复读、幻读情况的发生。	
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20201130163023206.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MzIwNzAyNQ==,size_16,color_FFFFFF,t_70)
