--- a/RabbitMQ/消息.md
+++ b/RabbitMQ/消息.md
@@ -174,7 +174,7 @@ public class Consumer {
         System.out.println("Consumer TAG-B start...");
     }
 }
-/** j
+/** 接收到的消息：
 hello floweryu TagA18
 hello floweryu TagA19
 hello floweryu TagA20
@@ -218,5 +218,155 @@ public class ProducerTags {
         System.out.println("shutdown...");
     }
 }
+```
+
+# 4. 事务消息
+
+事务消息的回调有什么用`checkLocalTransaction`？
+
+```java
+public class Producer {
+    public static void main(String[] args) throws Exception {
+        TransactionMQProducer transactionMQProducer = new TransactionMQProducer("floweryu");
+        transactionMQProducer.setNamesrvAddr("localhost:9876");
+
+        transactionMQProducer.setTransactionListener(new TransactionListener() {
+            @Override
+            public LocalTransactionState executeLocalTransaction(Message message, Object o) {
+                // 执行本地事务
+                System.out.println("------执行本地事务------");
+                System.out.println("msg:  " + Arrays.toString(message.getBody()));
+                System.out.println("msg:  " + message.getTransactionId());
+                return LocalTransactionState.UNKNOW;
+            }
+
+            @Override
+            public LocalTransactionState checkLocalTransaction(MessageExt messageExt) {
+
+                System.out.println("------检查本地事务------");
+                System.out.println("msg:  " + Arrays.toString(messageExt.getBody()));
+                System.out.println("msg:  " + messageExt.getTransactionId());
+                // broker 回调，检查事务
+                return LocalTransactionState.UNKNOW;
+            }
+        });
+
+        transactionMQProducer.start();
+        SendResult sendResult = transactionMQProducer.sendMessageInTransaction(new Message("topic002", "测试事务消息".getBytes()), null);
+
+        System.out.println("sendResult:  " + sendResult);
+
+//        transactionMQProducer.shutdown();
+        System.out.println("服务已关闭");
+    }
+}
+
+/** 
+------执行本地事务------
+msg:  [-26, -75, -117, -24, -81, -107, -28, -70, -117, -27, -118, -95, -26, -74, -120, -26, -127, -81]
+msg:  7F0000012F5418B4AAC218E5F78F0000
+sendResult:  SendResult [sendStatus=SEND_OK, msgId=7F0000012F5418B4AAC218E5F78F0000, offsetMsgId=null, messageQueue=MessageQueue [topic=topic003, brokerName=broker-a, queueId=3], queueOffset=24]
+服务已关闭
+------检查本地事务------
+msg:  [-26, -75, -117, -24, -81, -107, -28, -70, -117, -27, -118, -95, -26, -74, -120, -26, -127, -81]
+msg:  7F0000012F5418B4AAC218E5F78F0000
+*/
+```
+
+# 5. 顺序消息
+
+- 消息属于同一个Topic
+- 消息在同一个queue中
+- 发消息的时候一个线程发送消息
+- 消费的时候一个线程消费一个queue里面的消息
+- 多个queue只能保证单个queue里面的顺序
+
+```java
+package com.floweryu.rocketmq;
+
+import org.apache.rocketmq.client.producer.DefaultMQProducer;
+import org.apache.rocketmq.client.producer.MessageQueueSelector;
+import org.apache.rocketmq.client.producer.SendResult;
+import org.apache.rocketmq.common.message.Message;
+import org.apache.rocketmq.common.message.MessageQueue;
+
+import java.util.List;
+
+/**
+ * @author floweryu
+ * @date 2021/8/6 10:49
+ */
+public class ProducerQueue {
+    public static void main(String[] args) throws Exception {
+        DefaultMQProducer defaultMQProducer = new DefaultMQProducer("floweryu");
+
+        // 设置nameserver地址
+        defaultMQProducer.setNamesrvAddr("106.15.42.148:9876");
+        defaultMQProducer.start();
+
+        for (int i = 0; i < 20; i++) {
+            Message msg1 = new Message("orderTopic", ("hello floweryu " + i).getBytes());
+
+            SendResult send = defaultMQProducer.send(msg1, new MessageQueueSelector() {
+                @Override
+                public MessageQueue select(List<MessageQueue> list, Message message, Object o) {
+                    return list.get(0);
+                }
+            }, 0);
+
+            System.out.println("sentResult: " + send);
+        }
+
+
+        defaultMQProducer.shutdown();
+        System.out.println("producer has stop !");
+    }
+}
+
+```
+
+```java
+package com.floweryu.rocketmq;
+
+import org.apache.rocketmq.client.consumer.DefaultMQPushConsumer;
+import org.apache.rocketmq.client.consumer.MessageSelector;
+import org.apache.rocketmq.client.consumer.listener.*;
+import org.apache.rocketmq.common.message.MessageExt;
+import org.apache.rocketmq.common.protocol.heartbeat.MessageModel;
+
+import java.util.List;
+
+/**
+ * @author Floweryu
+ * @date 2021/8/1 15:51
+ **/
+public class Consumer {
+    public static void main(String[] args) throws Exception{
+        DefaultMQPushConsumer consumer = new DefaultMQPushConsumer("floweryu_consumer");
+
+        consumer.setNamesrvAddr("106.15.42.148:9876");
+
+        consumer.subscribe("orderTopic", "*");
+
+        consumer.setConsumeThreadMax(1);
+        consumer.setConsumeThreadMin(1);
+
+        // 顺序消费
+        consumer.registerMessageListener(new MessageListenerOrderly() {
+            @Override
+            public ConsumeOrderlyStatus consumeMessage(List<MessageExt> list, ConsumeOrderlyContext consumeOrderlyContext) {
+                for (MessageExt msg : list) {
+                    System.out.println(new String(msg.getBody()));
+                }
+                return ConsumeOrderlyStatus.SUCCESS;
+            }
+        });
+
+        consumer.start();
+
+        System.out.println("Consumer start...");
+    }
+}
+
 ```
 
