--- a/操作系统/零拷贝技术.md
+++ b/操作系统/零拷贝技术.md
@@ -1,1 +1,131 @@
    
+
+# 1. I/O中断读取
+
+在DMA技术之前，I/O过程是这样的：
+
+- CPU发出I/O请求给磁盘，然后等待返回;
+- 磁盘收到指令后，开始准备数据，将数据放入到磁盘控制器的内部缓冲区中，然后产生一个中断。
+- CPU收到中断信号后，停下现在工作，将磁盘控制器的缓存区的数据一次一个字节地读进自己的寄存器，然后再把寄存器里的数据写入到内存，在数据传输期间CPU是无法执行其它任务的。
+
+<img src="https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210808175326.png" alt="image-20210808175325027" style="zoom: 50%;" />
+
+整个数据传输过程，都需要CPU参与，在这期间，CPU不能参与其它事情。
+
+# 2. DMA技术(直接内存访问)
+
+**在进行 I/O 设备和内存的数据传输的时候，数据搬运的工作全部交给 DMA 控制器，而 CPU 不再参与任何与数据搬运相关的事情，这样 CPU 就可以去处理别的事务**。
+
+![image-20210808220617991](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210808220628.png)
+
+具体过程为：
+
+- 用户进程调用 read 方法，向操作系统发送 I/O 请求，请求读取数据到自己的内存缓冲池，进程进入阻塞状态。
+- 操作系统收到请求后，进一步将 I/O 请求发送 DMA，然后让 CPU 执行其他任务。
+- DMA 进一步将 I/O 请求发送给磁盘；
+- 磁盘收到 DMA 的 I/O 请求，把数据从磁盘读取到磁盘控制器的缓冲区中，当磁盘控制器的缓冲区被读满后，向 DMA 发起中断信号，告知自己缓冲区已满；
+- **DMA 收到磁盘的信号，将磁盘控制器缓冲区中的数据拷贝到内核缓冲区中，此时不占用 CPU，CPU 可以执行其他任务**；
+- 当 DMA 读取了足够多的数据，就会发送中断信号给 CPU；
+- CPU 收到 DMA 的信号，知道数据已经准备好，于是将数据从内核拷贝到用户空间，系统调用返回；
+
+可以看到， 整个数据传输的过程，CPU 不再参与数据搬运的工作，而是全程由 DMA 完成，但是 CPU 在这个过程中也是必不可少的，因为传输什么数据，从哪里传输到哪里，都需要 CPU 来告诉 DMA 控制器。
+
+# 3. 传统的文件传输
+
+传统 I/O 的工作方式是，数据读取和写入是从用户空间到内核空间来回复制，而内核空间的数据是通过操作系统层面的 I/O 接口从磁盘读取或写入。
+
+![image-20210808230049042](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210808230050.png)
+
+首先，期间共**发生了 4 次用户态与内核态的上下文切换**，因为发生了两次系统调用，一次是 `read()` ，一次是 `write()`，每次系统调用都得先从用户态切换到内核态，等内核完成任务后，再从内核态切换回用户态。
+
+上下文切换到成本并不小，一次切换需要耗时几十纳秒到几微秒，虽然时间看上去很短，但是在高并发的场景下，这类时间容易被累积和放大，从而影响系统的性能。
+
+其次，还**发生了 4 次数据拷贝**，其中两次是 DMA 的拷贝，另外两次则是通过 CPU 拷贝的，下面说一下这个过程：
+
+- ***第一次拷贝***，把磁盘上的数据拷贝到操作系统内核的缓冲区里，这个拷贝的过程是通过 DMA 搬运的。
+- ***第二次拷贝***，把内核缓冲区的数据拷贝到用户的缓冲区里，于是我们应用程序就可以使用这部分数据了，这个拷贝到过程是由 CPU 完成的。
+- ***第三次拷贝***，把刚才拷贝到用户的缓冲区里的数据，再拷贝到内核的 socket 的缓冲区里，这个过程依然还是由 CPU 搬运的。
+- ***第四次拷贝***，把内核的 socket 缓冲区里的数据，拷贝到网卡的缓冲区里，这个过程又是由 DMA 搬运的。
+
+所以，**要想提高文件传输的性能，就需要减少「用户态与内核态的上下文切换」和「内存拷贝」的次数**。
+
+# 4. 如何优化文件传输性能
+
+> 先来看看，如何减少「用户态与内核态的上下文切换」的次数呢？
+
+读取磁盘数据的时候，之所以要发生上下文切换，这是因为**用户空间没有权限操作磁盘或网卡**，内核的权限最高，这些操作设备的过程都需要交由操作系统内核来完成，所以一般要通过内核去完成某些任务的时候，就需要使用操作系统提供的系统调用函数。
+
+而一次系统调用必然会发生 2 次上下文切换：首先从用户态切换到内核态，当内核执行完任务后，再切换回用户态交由进程代码执行。
+
+所以，**要想减少上下文切换到次数，就要减少系统调用的次数**。
+
+> 如何减少「数据拷贝」的次数？
+
+传统的文件传输方式会历经 4 次数据拷贝，而且这里面，「从内核的读缓冲区拷贝到用户的缓冲区里，再从用户的缓冲区里拷贝到 socket 的缓冲区里」，这个过程是没有必要的。
+
+因为文件传输的应用场景中，在用户空间我们并不会对数据「再加工」，所以数据实际上可以不用搬运到用户空间，因此**用户的缓冲区是没有必要存在的**。
+
+# 5. 如何实现零拷贝
+
+零拷贝技术实现的方式通常有 2 种：
+
+- mmap + write
+- sendfile
+
+下面就谈一谈，它们是如何减少「上下文切换」和「数据拷贝」的次数。
+
+## mmap + write
+
+`mmap()` 系统调用函数会直接把内核缓冲区里的数据「**映射**」到用户空间，这样，操作系统内核与用户空间就不需要再进行任何的数据拷贝操作。
+
+![image-20210808230026032](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210808230027.png)
+
+具体过程如下：
+
+- 应用进程调用了 `mmap()` 后，DMA 会把磁盘的数据拷贝到内核的缓冲区里。接着，应用进程跟操作系统内核「共享」这个缓冲区；
+- 应用进程再调用 `write()`，操作系统直接将内核缓冲区的数据拷贝到 socket 缓冲区中，这一切都发生在内核态，由 CPU 来搬运数据；
+- 最后，把内核的 socket 缓冲区里的数据，拷贝到网卡的缓冲区里，这个过程是由 DMA 搬运的。
+
+可以得知，通过使用 `mmap()` 来代替 `read()`， 可以减少一次数据拷贝的过程。
+
+但这还不是最理想的零拷贝，因为仍然需要通过 CPU 把内核缓冲区的数据拷贝到 socket 缓冲区里，而且仍然需要 4 次上下文切换，因为系统调用还是 2 次。
+
+## sendfile
+
+```c
+#include <sys/socket.h>
+ssize_t sendfile(int out_fd, int in_fd, off_t *offset, size_t count);
+```
+
+它的前两个参数分别是目的端和源端的文件描述符，后面两个参数是源端的偏移量和复制数据的长度，返回值是实际复制数据的长度。
+
+首先，它可以替代前面的 `read()` 和 `write()` 这两个系统调用，这样就可以减少一次系统调用，也就减少了 2 次上下文切换的开销。
+
+其次，该系统调用，可以直接把内核缓冲区里的数据拷贝到 socket 缓冲区里，不再拷贝到用户态，这样就只有 2 次上下文切换，和 3 次数据拷贝。如下图：
+
+![image-20210808230648878](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210808230746.png)
+
+但是这还不是真正的零拷贝技术，如果网卡支持 SG-DMA（*The Scatter-Gather Direct Memory Access*）技术（和普通的 DMA 有所不同），我们可以进一步减少通过 CPU 把内核缓冲区里的数据拷贝到 socket 缓冲区的过程。
+
+可以在你的 Linux 系统通过下面这个命令，查看网卡是否支持 scatter-gather 特性：
+
+```shell
+$ ethtool -k eth0 | grep scatter-gather
+scatter-gather: on
+```
+
+对于支持网卡支持 SG-DMA 技术的情况下， `sendfile()` 系统调用的过程发生了点变化，具体过程如下：
+
+- 第一步，通过 DMA 将磁盘上的数据拷贝到内核缓冲区里；
+- 第二步，缓冲区描述符和数据长度传到 socket 缓冲区，这样网卡的 SG-DMA 控制器就可以直接将内核缓存中的数据拷贝到网卡的缓冲区里，此过程不需要将数据从操作系统内核缓冲区拷贝到 socket 缓冲区中，这样就减少了一次数据拷贝；
+
+这个过程之中，只进行了 2 次数据拷贝，如下图：
+
+![image-20210808231226039](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210808231227.png)
+
+这就是所谓的**零拷贝（\*Zero-copy\*）技术，因为我们没有在内存层面去拷贝数据，也就是说全程没有通过 CPU 来搬运数据，所有的数据都是通过 DMA 来进行传输的。**
+
+零拷贝技术的文件传输方式相比传统文件传输的方式，减少了 2 次上下文切换和数据拷贝次数，**只需要 2 次上下文切换和数据拷贝次数，就可以完成文件的传输，而且 2 次的数据拷贝过程，都不需要通过 CPU，2 次都是由 DMA 来搬运。**
+
+所以，总体来看，**零拷贝技术可以把文件传输的性能提高至少一倍以上**。
+
