--- a/操作系统/零拷贝技术.md
+++ b/操作系统/零拷贝技术.md
@@ -129,3 +129,7 @@ scatter-gather: on
 
 所以，总体来看，**零拷贝技术可以把文件传输的性能提高至少一倍以上**。
 
+# 参考文章：
+- https://www.cnblogs.com/xiaolincoding/p/13719610.html
+- https://www.cnblogs.com/rickiyang/p/13265043.html
+
