--- a/设计模式/装饰模式.md
+++ b/设计模式/装饰模式.md
@@ -80,6 +80,163 @@ public class ConcreteDecoratorB extends Decorator {
 
 > 咖啡是一种饮料，咖啡店现在要卖各种口味的咖啡，如果不使用装饰模式，那么在销售系统中，各种不一样的咖啡都要产生一个类，如果有4种咖啡豆，5种口味，那么将要产生至少20个类（不包括混合口味），使用装饰模式可以减少类。
 
+![image-20210908100935552](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210908100937.png)
+
+咖啡种类接口：
+
+```java
+public interface Beverage {
+    
+    String getDescription();
+    
+    double getPrice();
+}
+```
+
+第一种咖啡：
+
+```java
+public class CoffeeBean1 implements Beverage{
+    
+    private String description = "鸟屎咖啡";
+    
+    @Override
+    public String getDescription() {
+        return this.description;
+    }
+
+    @Override
+    public double getPrice() {
+        return 60;
+    }
+}
+```
+
+第二种咖啡：
+
+```java
+public class CoffeeBean2 implements Beverage{
+    
+    private String description = "猫屎咖啡";
+    
+    @Override
+    public String getDescription() {
+        return this.description;
+    }
+
+    @Override
+    public double getPrice() {
+        return 100;
+    }
+}
+```
+
+装饰类接口：由于每个装饰器都需要返回关于咖啡的信息，所以要实现Beverage
+
+```java
+public class Decorator implements Beverage{
+    
+    private String description = "装饰器类";
+    
+    @Override
+    public String getDescription() {
+        return this.description;
+    }
+
+    @Override
+    public double getPrice() {
+        return 0;
+    }
+}
+```
+
+牛奶装饰类：
+
+```java
+public class Milk extends Decorator{
+    private String description = "加牛奶";
+    private Beverage beverage;
+    
+    public Milk(Beverage beverage) {
+        this.beverage = beverage;
+    }
+    
+    @Override
+    public String getDescription() {
+        return beverage.getDescription() + "\n" + description;
+    }
+    
+    @Override
+    public double getPrice() {
+        return beverage.getPrice() + 20;    // 加上牛奶的价格
+    }
+}
+```
+
+摩卡装饰类：
+
+```java
+public class Mocha extends Decorator {
+    private String description = "加摩卡";
+    private Beverage beverage;
+
+    public Mocha(Beverage beverage) {
+        this.beverage = beverage;
+    }
+
+    @Override
+    public String getDescription() {
+        return beverage.getDescription() + "\n" + description;
+    }
+
+    @Override
+    public double getPrice() {
+        return beverage.getPrice() + 30;    // 加上摩卡的价格
+    }
+}
+```
+
+豆浆装饰类：
+
+```java
+public class Soy extends Decorator{
+    private String description = "加豆浆";
+    private Beverage beverage;
+
+    public Soy(Beverage beverage) {
+        this.beverage = beverage;
+    }
+
+    @Override
+    public String getDescription() {
+        return beverage.getDescription() + "\n" + description;
+    }
+
+    @Override
+    public double getPrice() {
+        return beverage.getPrice() + 10;    // 加上豆浆的价格
+    }
+}
+```
+
+测试类及输出：
+
+```java
+public class DecorateTest {
+
+    public static void main(String[] args) {
+        Beverage beverage = new CoffeeBean1();
+        beverage = new Milk(beverage);
+        beverage = new Soy(beverage);
+        System.out.println(beverage.getDescription() + "   价格:   " + beverage.getPrice());
+    }
+}
+
+鸟屎咖啡
+加牛奶
+加豆浆   价格:   90.0
+```
+
 
 
 ## 参考连接：
