--- a/Sentinel/限流算法和方式详解.md
+++ b/Sentinel/限流算法和方式详解.md
@@ -74,4 +74,15 @@ public class RateLimiterSimpleWindow {
 20:54:14.870337600 被限流
 ```
 
-实际上该算法是有问题的，虽然限制了QPS为2，但当遇到滑动窗口的临界处时，可能会出现下面情况：第1s的后500ms请求两次，第2s的前500ms请求两次，这时加起来是1s，但却请求
+实际上该算法是有问题的，虽然限制了QPS为2，但当遇到滑动窗口的临界处时，可能会出现下面情况：第1s的后500ms请求两次，第2s的前500ms请求两次，这时加起来是1s，但却请求了4次。**这是固定窗口存在的问题**
+
+![image-20220814170449860](https://s2.loli.net/2022/08/14/ROFxsEzWp9yT3uP.png)
+
+
+
+## 3. 滑动窗口算法
+
+滑动窗口算法解决了固定窗口算法存在的问题。
+
+![image-20220814170625309](https://s2.loli.net/2022/08/14/zVShQuB1NYPxs2Z.png)
+
