--- a/算法笔记/二分查找专题.md
+++ b/算法笔记/二分查找专题.md
@@ -62,3 +62,35 @@ public int fingKth(int[] nums1, int i, int[] nums2, int j, int k) {
 }
 ```
 
+### 方法二：归并排序
+
+**思路**：因为两个数组都是有序数组，所以直接使用归并排序一次即可合并成整个有序数组，然后再取中位数。
+
+```java
+public double findMedianSortedArrays1(int[] nums1, int[] nums2) {
+    // 先归并排序, 因为两个都是有序数组
+    int[] res = mergeSort(nums1, nums2);
+    // 这里使用一个小trick, 不用判断奇偶长度
+    return (res[(res.length + 1) / 2 - 1] + res[(res.length + 2) / 2 - 1]) / 2.0;
+}
+
+// 归并排序底层实现: 合并两个有序数组
+public int[] mergeSort(int[] nums1, int[] nums2) {
+    int len1 = nums1.length, len2 = nums2.length;
+    if (len1 < 1) return nums2;
+    if (len2 < 1) return nums1;
+    int[] res = new int[len1 + len2];
+    int i = 0, j = 0, index = 0;
+    while (i < len1 && j < len2) {
+        res[index++] = nums1[i] < nums2[j] ? nums1[i++] : nums2[j++];
+    }
+    while (i < len1) {
+        res[index++] = nums1[i++];
+    }
+    while (j < len2) {
+        res[index++] = nums2[j++];
+    }
+    return res;
+}
+```
+
