--- a/算法笔记/二分查找专题.md
+++ b/算法笔记/二分查找专题.md
@@ -94,3 +94,68 @@ public int[] mergeSort(int[] nums1, int[] nums2) {
 }
 ```
 
+## 在排序数组中查找元素的第一个和最后一个位置
+
+> https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/description/
+>
+> 给你一个按照非递减顺序排列的整数数组 `nums`，和一个目标值 `target`。请你找出给定目标值在数组中的开始位置和结束位置。
+>
+> 如果数组中不存在目标值 `target`，返回 `[-1, -1]`。
+>
+> 你必须设计并实现时间复杂度为 `O(log n)` 的算法解决此问题。
+>
+> ```
+> 输入：nums = [5,7,7,8,8,10], target = 8
+> 输出：[3,4]
+> ```
+>
+> ```
+> 输入：nums = [5,7,7,8,8,10], target = 6
+> 输出：[-1,-1]
+> ```
+
+### 方法一：二分查找分别寻找最左边界和最右边界
+
+**思路**：
+
+1. 二分查找可以寻找最左边界和最右边界
+2. 找到边界后需要判断边界是否合法
+
+```java
+public int[] searchRange(int[] nums, int target) {
+    int[] res = new int[]{-1, -1};
+    // 寻找最左边界
+    int left = 0;
+    int right = nums.length;
+    while (left < right) {
+        int mid = (left + right) / 2;
+        if (nums[mid] < target) {
+            left = mid + 1;
+        } else if (nums[mid] >= target) {
+            // 这时不需要mid-1, 因为右区间本来就不存在数字
+            right = mid;
+        }
+    }
+    // 判断一下边界和是否等于target
+    if (left < nums.length && nums[left] == target) res[0] = left;
+
+    // 寻找最右边界
+    left = 0;
+    right = nums.length;
+    while (left < right) {
+        int mid = (left + right) / 2;
+        if (nums[mid] <= target) {
+            // 因为是寻找右边界, 所以left相等也先舍弃
+            left = mid + 1;
+        } else if (nums[mid] > target) {
+            // 这时不需要mid-1, 因为右区间本来就不存在数字
+            right = mid;
+        }
+    }
+    // 判断一下边界和是否等于target
+    if (right > 0 && nums[right - 1] == target) res[1] = right - 1;
+
+    return res;
+}
+```
+
