--- a/算法笔记/二分查找专题.md
+++ b/算法笔记/二分查找专题.md
@@ -114,12 +114,14 @@ public int[] mergeSort(int[] nums1, int[] nums2) {
 > 输出：[-1,-1]
 > ```
 
-### 方法一：二分查找分别寻找最左边界和最右边界
+### 方法：二分查找分别寻找最左边界和最右边界
 
-**思路**：
+#### **思路**：
 
 1. 二分查找可以寻找最左边界和最右边界
 2. 找到边界后需要判断边界是否合法
+
+#### 普通代码结构
 
 ```java
 public int[] searchRange(int[] nums, int target) {
@@ -159,3 +161,39 @@ public int[] searchRange(int[] nums, int target) {
 }
 ```
 
+#### **优化代码结构**：
+
+```java
+class Solution {
+    public int[] searchRange(int[] nums, int target) {
+        // 寻找左边界
+        int left = binarySearch(nums, target, true);
+        // 寻找右边界，由于返回的是第一个>=target 但是索引+1的值, 所以要减1（参考left=mid+1后才返回，这时多加了个1）
+        int right = binarySearch(nums, target, false) - 1;
+        if (left < nums.length && right >= 0 && nums[left] == target && nums[right] == target) {
+            return new int[]{left, right};
+        }
+        return new int[]{-1, -1};
+    }
+    
+    // flag=true表示寻找最左边界
+    // 左右边界都可以返回left. 原因: 因为结束条件是left < right, 所以跳出循环时一定是left=right, 所以返回left和right都行
+    public int binarySearch(int[] nums, int target, boolean flag) {
+        int left = 0, right = nums.length;
+        while (left < right) {
+            int mid = (left + right) / 2;
+            if (nums[mid] > target || (flag && nums[mid] >= target)) {
+                right = mid;
+            } else {
+                left = mid + 1;
+            }
+        }
+        return left;
+    }
+}
+
+```
+
+### 参考文章：
+
+- 二分查找算法的几种情况：https://floweryu.blog.csdn.net/article/details/112378419
