--- a/算法笔记/二分查找专题.md
+++ b/算法笔记/二分查找专题.md
@@ -1,4 +1,4 @@
-## 寻找两个正序数组的中位数
+## 二分4. 寻找两个正序数组的中位数
 
 > https://leetcode.cn/problems/median-of-two-sorted-arrays/description/
 >
@@ -12,7 +12,7 @@
 > 解释：合并数组 = [1,2,3,4] ，中位数 (2 + 3) / 2 = 2.5
 > ```
 
-### 方法一：递归+二分查找排序第k值
+### 题解一：递归+二分查找排序第k值
 
 **时间复杂度**：`O(log(m+n))`
 
@@ -62,7 +62,7 @@ public int fingKth(int[] nums1, int i, int[] nums2, int j, int k) {
 }
 ```
 
-### 方法二：归并排序
+### 题解二：归并排序
 
 **思路**：因为两个数组都是有序数组，所以直接使用归并排序一次即可合并成整个有序数组，然后再取中位数。
 
@@ -94,7 +94,7 @@ public int[] mergeSort(int[] nums1, int[] nums2) {
 }
 ```
 
-## 在排序数组中查找元素的第一个和最后一个位置
+## 二分34. 在排序数组中查找元素的第一个和最后一个位置
 
 > https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/description/
 >
@@ -114,7 +114,7 @@ public int[] mergeSort(int[] nums1, int[] nums2) {
 > 输出：[-1,-1]
 > ```
 
-### 方法：二分查找分别寻找最左边界和最右边界
+### 题解：二分查找分别寻找最左边界和最右边界
 
 #### **思路**：
 
@@ -194,6 +194,91 @@ class Solution {
 
 ```
 
-### 参考文章：
+#### 参考文章：
 
 - 二分查找算法的几种情况：https://floweryu.blog.csdn.net/article/details/112378419
+
+## 二分35. 搜索插入位置
+
+> https://leetcode.cn/problems/search-insert-position/description/
+>
+> 给定一个排序数组和一个目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。
+>
+> 请必须使用时间复杂度为 `O(log n)` 的算法。
+>
+> ```
+> 输入: nums = [1,3,5,6], target = 2
+> 输出: 1
+> ```
+>
+> ```
+> 输入: nums = [1,3,5,6], target = 5
+> 输出: 2
+> ```
+
+### 题解：二分寻找目标值最左边界
+
+#### 思路：
+
+返回将要被插入的位置，其实就是寻找到target的最左边界, 找到最接近小于target的值的位置
+
+```java
+public int searchInsert(int[] nums, int target) {
+    int left = 0;
+    int right = nums.length;
+    while (left < right) {
+        int mid = (left + right) / 2;
+        if (nums[mid] >= target) {
+            right = mid;
+        } else {
+            left = mid + 1;
+        }
+    }
+    return left;
+}
+```
+
+## 二分74：搜索二维矩阵
+
+> https://leetcode.cn/problems/search-a-2d-matrix/
+>
+> 编写一个高效的算法来判断 `m x n` 矩阵中，是否存在一个目标值。该矩阵具有如下特性：
+>
+> - 每行中的整数从左到右按升序排列。
+> - 每行的第一个整数大于前一行的最后一个整数。
+>
+> <img src="./assets/image-20230316132305748.png" alt="image-20230316132305748" style="zoom:25%;" />
+>
+> ```
+> 输入：matrix = [[1,3,5,7],[10,11,16,20],[23,30,34,60]], target = 3
+> 输出：true
+> ```
+
+### 题解： 二叉搜索树思想（消去行列）
+
+详情可见：[剑指Offer.04 二维数组中的查找](https://leetcode.cn/problems/er-wei-shu-zu-zhong-de-cha-zhao-lcof/?favorite=xb9nqhhg)
+
+#### 思路：
+
+ * 以矩阵左下角位置tmp为观察点: 小于tmp的元素都在tmp所在行之上, 大于tmp的元素都在tmp所在列向右
+ * 所以, 每次比较tmp和target的值, 然后舍弃行列即可, 规则如下：
+ * 1. 若target > tmp, 则说明tmp该列向左的元素都小于target, 所以舍弃该列，即j++
+ * 2. 若target < tmp, 则说明target在tmp所在行之上，所以舍弃该行，即i--
+
+```java
+public boolean searchMatrix(int[][] matrix, int target) {
+    int i = matrix.length - 1;
+    int j = 0;
+    while (i >= 0 && j <= matrix[0].length - 1) {
+        if (target > matrix[i][j]) {
+            j++;
+        } else if (target < matrix[i][j]) {
+            i--;
+        } else {
+            return true;
+        }
+    }
+    return false;
+}
+```
+
