--- a/算法笔记/排序算法及其时间复杂度.md
+++ b/算法笔记/排序算法及其时间复杂度.md
@@ -7,7 +7,7 @@
 - **时间复杂度：** 一个算法执行所耗费的时间。
 - **空间复杂度**：运行完一个程序所需内存的大小。
 
-![img](https://i.loli.net/2021/03/15/gvDndMyEKpV7bZ6.png)
+![image-20230316225544936](./assets/image-20230316225544936.png)
 
 **图片名词解释：**
 
@@ -16,7 +16,7 @@
 - `In-place`: 占用常数内存，不占用额外内存
 - `Out-place`: 占用额外内存
 
-![img](https://i.loli.net/2021/03/15/rvuB1ze5aZTnCm3.jpg)
+![image-20230316225626782](./assets/image-20230316225626782.png)
 
 # 2. 冒泡排序
 
