--- a/MySQL/数据库的事务隔离级别总结.md
+++ b/MySQL/数据库的事务隔离级别总结.md
@@ -45,7 +45,7 @@
 - `Repeatable Read（可重复读）`：保证了在同一个事务中多次读取同样记录的结果是一致的。可以避免脏读和不可重复读，仍会出现幻读问题。可重复读是MySQL默认的事务隔离级别。
 - `Serializable （串行化）`：最严格的事务隔离级别，要求所有事务被串行执行，不能并发执行，可避免脏读、不可重复读、幻读情况的发生。	
 
-![在这里插入图片描述](https://img-blog.csdnimg.cn/20201130163023206.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MzIwNzAyNQ==,size_16,color_FFFFFF,t_70)
+![image-20230316230315194](./assets/image-20230316230315194.png)
 
 MySQL8.0查询和设置隔离级别：
 
