--- a/MySQL/高性能索引策略.md
+++ b/MySQL/高性能索引策略.md
@@ -143,7 +143,7 @@ mysql> SELECT COUNT(DISTINCT LEFT(city, 3))/COUNT(*) AS sel3,
 
 下图叶子页包含了行的全部数据，节点页只包含了索引列。
 
-<img src="https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210730142734.png" alt="image-20210730142726791" style="zoom:50%;" />
+<img src="./assets/20210730142734.png" alt="image-20210730142726791" style="zoom:50%;" />
 
 InnoDB通过主键聚集数据，被索引的列是主键列。
 
