--- a/操作系统/零拷贝技术.md
+++ b/操作系统/零拷贝技术.md
@@ -8,7 +8,7 @@
 - 磁盘收到指令后，开始准备数据，将数据放入到磁盘控制器的内部缓冲区中，然后产生一个中断。
 - CPU收到中断信号后，停下现在工作，将磁盘控制器的缓存区的数据一次一个字节地读进自己的寄存器，然后再把寄存器里的数据写入到内存，在数据传输期间CPU是无法执行其它任务的。
 
-<img src="https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210808175326.png" alt="image-20210808175325027" style="zoom: 50%;" />
+<img src="./assets/20210808175326.png" alt="image-20210808175325027" style="zoom: 50%;" />
 
 整个数据传输过程，都需要CPU参与，在这期间，CPU不能参与其它事情。
 
@@ -16,7 +16,7 @@
 
 **在进行 I/O 设备和内存的数据传输的时候，数据搬运的工作全部交给 DMA 控制器，而 CPU 不再参与任何与数据搬运相关的事情，这样 CPU 就可以去处理别的事务**。
 
-![image-20210808220617991](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210808220628.png)
+![image-20210808220617991](./assets/20210808220628.png)
 
 具体过程为：
 
@@ -34,7 +34,7 @@
 
 传统 I/O 的工作方式是，数据读取和写入是从用户空间到内核空间来回复制，而内核空间的数据是通过操作系统层面的 I/O 接口从磁盘读取或写入。
 
-![image-20210808230049042](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210808230050.png)
+![image-20210808230049042](./assets/20210808230050.png)
 
 首先，期间共**发生了 4 次用户态与内核态的上下文切换**，因为发生了两次系统调用，一次是 `read()` ，一次是 `write()`，每次系统调用都得先从用户态切换到内核态，等内核完成任务后，再从内核态切换回用户态。
 
@@ -78,7 +78,7 @@
 
 `mmap()` 系统调用函数会直接把内核缓冲区里的数据「**映射**」到用户空间，这样，操作系统内核与用户空间就不需要再进行任何的数据拷贝操作。
 
-![image-20210808230026032](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210808230027.png)
+![image-20210808230026032](./assets/20210808230027.png)
 
 具体过程如下：
 
@@ -103,7 +103,7 @@ ssize_t sendfile(int out_fd, int in_fd, off_t *offset, size_t count);
 
 其次，该系统调用，可以直接把内核缓冲区里的数据拷贝到 socket 缓冲区里，不再拷贝到用户态，这样就只有 2 次上下文切换，和 3 次数据拷贝。如下图：
 
-![image-20210808230648878](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210808230746.png)
+![image-20210808230648878](./assets/20210808230746.png)
 
 但是这还不是真正的零拷贝技术，如果网卡支持 SG-DMA（*The Scatter-Gather Direct Memory Access*）技术（和普通的 DMA 有所不同），我们可以进一步减少通过 CPU 把内核缓冲区里的数据拷贝到 socket 缓冲区的过程。
 
@@ -121,7 +121,7 @@ scatter-gather: on
 
 这个过程之中，只进行了 2 次数据拷贝，如下图：
 
-![image-20210808231226039](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210808231227.png)
+![image-20210808231226039](./assets/20210808231227.png)
 
 这就是所谓的**零拷贝（\*Zero-copy\*）技术，因为我们没有在内存层面去拷贝数据，也就是说全程没有通过 CPU 来搬运数据，所有的数据都是通过 DMA 来进行传输的。**
 
