--- a/分布式业务/短视频首页熔断设计.md
+++ b/分布式业务/短视频首页熔断设计.md
@@ -2,7 +2,7 @@
 
 >  为保证服务可用，使用了两级熔断机制，使用Sentinel+分布式缓存等技术。
 
-![image-20220611154158177](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202206111541619.png)
+![image-20220611154158177](./assets/202206111541619.png)
 
 
 
@@ -38,4 +38,4 @@ private void initSentinelRules() {
 
 视频表数据条数：1.46亿，容量110GB
 
-![](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202206122127038.jpg)
+![](./assets/202206122127038.jpg)
