--- a/分布式业务/记一次数据库扩容处理过程.md
+++ b/分布式业务/记一次数据库扩容处理过程.md
@@ -10,17 +10,17 @@
 
 1. 新建两个新数据库集群，每个新库都是128张表(0~127)，同时同步老数据库数据到两个新集群。两个新集群的数据要做到实时同步，老库添加修改哪条数据，两个新库也要跟着变化。
 
-![image-20220724145422950](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202207241454438.png)
+![image-20220724145422950](./assets/202207241454438.png)
 
 2. 上线代码，分库分表映射方案在后面。使用两个新集群的数据库地址，进行查询和插入。这时两个新数据库的proxy还是指向旧数据库。同时验证数据是否写到旧数据库
 
-![image-20220724145612990](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202207241456533.png)
+![image-20220724145612990](./assets/202207241456533.png)
 
 3. DBA将两个新数据库的proxyA和proxyB同时指向两个新集群（30s内）
 
 这一步会有一个问题，当Aproxy切换完成后，Bproxy还没来得及切换时，Bproxy还是指向的旧数据库。此时Aproxy切换成功了，Aproxy已经开始向新数据库A中写入数据了，后面旧数据库在向新数据库中同步数据时，会造成主键冲突的异常。所以会丢失一小段时间数据（大概是Aproxy切换完成到Bproxy切换完成这段时间），参考下图：
 
-![image-20220724151207419](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202207241512712.png)
+![image-20220724151207419](./assets/202207241512712.png)
 
 丢失的这段时间的数据，后续可以让DBA修复。
 
