--- a/分布式业务/一致性哈希算法.md
+++ b/分布式业务/一致性哈希算法.md
@@ -18,13 +18,13 @@ public class HashUtils {
 
 ```
 
-![image-20220618145439066](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202206181454086.png)
+![image-20220618145439066](./assets/202206181454086.png)
 
 ### 1.1 当节点减少时
 
 在分布式系统中，假设有节点挂掉，节点的数量发生改变，从3个变成了2个，表格会发生变化：
 
-![image-20220618145757144](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202206181457283.png)
+![image-20220618145757144](./assets/202206181457283.png)
 
 该变化对系你的键不会产生影响，但是对于已有的键来说，将导致节点映射出错。
 
@@ -32,7 +32,7 @@ public class HashUtils {
 
 当对服务器节点进行扩容或者数据表再进行分表时，假设节点现在变成了4个，表格变化如下：
 
-![image-20220618150222850](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202206181502037.png)
+![image-20220618150222850](./assets/202206181502037.png)
 
 之前的映射规则也会发生改变。对于有些服务器有缓存来说，可能会造成缓存雪崩。对于数据库分表来说，取值时有可能找不到之前的映射关系。
 
@@ -47,25 +47,25 @@ public class HashUtils {
 
 通过一致性哈希环的数据结构实现。环的起点是0，终点是$2^{32}-1$，并且起点与终点连接，所以整个环的范围是$[0, 2^{32}-1]$。
 
-![image-20220618151748433](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202206181517950.png)
+![image-20220618151748433](./assets/202206181517950.png)
 
 #### a. 将对象放到哈希环上
 
 假设有o1, o2, o3, o4这四个对象，使用哈希函数计算对象的哈希值，范围就是哈希环的范围。
 
-![image-20220618152627359](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202206181526196.png)
+![image-20220618152627359](./assets/202206181526196.png)
 
 #### b. 将服务器节点放到哈希环上
 
 同样使用哈希函数，将服务器节点放到哈希环上，这里假设有三台节点m1, m2, m3.
 
-![](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202206181530427.png)
+![sss](./assets/202206181530427.png)
 
 #### c. 为对象选择服务器
 
 **在哈希环上顺时针查找距离这个对象的哈希值最近的节点，即是这个对象的所属节点**。
 
-![image-20220618153441968](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202206181534597.png)
+![image-20220618153441968](./assets/202206181534597.png)
 
 #### d. 服务器增加的情况
 
@@ -73,13 +73,13 @@ public class HashUtils {
 
 **前面提到过，如果使用简单的取模方法，当新添加节点时，会导致大部分节点上的数据都会失效（按原哈希取不到数据）。而使用一致性哈希算法后，只有少部分对象需要重新分配。**
 
-![image-20220618153843241](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202206181538686.png)
+![image-20220618153843241](./assets/202206181538686.png)
 
 #### e. 服务器减少的情况
 
 假设m3节点下线，k4将会链接到m1节点上，其他对象所连节点仍不会改变。
 
-![image-20220618154505174](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202206181545509.png)
+![image-20220618154505174](./assets/202206181545509.png)
 
 #### f. 虚拟节点机制
 
@@ -87,7 +87,7 @@ public class HashUtils {
 
 例如，只有两个redis节点，分布情况如下，导致大部分数据都会存储到m3中：
 
-![image-20220618171332194](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202206181713097.png)
+![image-20220618171332194](./assets/202206181713097.png)
 
 为了解决这种数据存储不平衡的问题，一致性哈希算法引入了虚拟节点机制，即**对每个节点计算多个哈希值，每个计算结果位置都放置在对应节点中**，这些节点称为**虚拟节点**。
 
@@ -95,6 +95,6 @@ public class HashUtils {
 
 具体位置如下图：
 
-![image-20220618172036145](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202206181720860.png)
+![image-20220618172036145](./assets/202206181720860.png)
 
 对于数据定位的hash算法仍然不变，只是增加了虚拟节点到实际节点的映射。例如，数据A保存到**m1#3**虚拟节点上，但实际还是在**m1**中，这样解决了数据不平均的问题。
