--- a/设计模式/代理模式.md
+++ b/设计模式/代理模式.md
@@ -2,7 +2,7 @@
 
 为其它对象提供一个代理以控制对这个对象的访问。
 
-![image-20210912174924454](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210912174929.png)
+![image-20210912174924454](./assets/20210912174929.png)
 
 **Subject类**：定义了**RrealSubject**和**Proxy**的公用接口，这样就可以在任何使用**RealSubject**的地方都可以使用**Proxy**
 
