--- a/设计模式/备忘录模式.md
+++ b/设计模式/备忘录模式.md
@@ -1,4 +1,4 @@
-![image-20211128110437648](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202111281104033.png)
+![image-20211128110437648](./assets/202111281104033.png)
 
 ​	
 
