--- a/设计模式/桥接模式.md
+++ b/设计模式/桥接模式.md
@@ -1,4 +1,4 @@
-![image-20211128210404584](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202111282104304.png)
+![image-20211128210404584](./assets/202111282104304.png)
 
 **抽象类**
 
