--- a/设计模式/策略模式.md
+++ b/设计模式/策略模式.md
@@ -8,7 +8,7 @@
 
 实现一个商场收银系统，UML类图如下：
 
-![image-20210906203757534](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210906203759.png)
+![image-20210906203757534](./assets/20210906203759.png)
 
 **CashContext类**
 
