--- a/设计模式/装饰模式.md
+++ b/设计模式/装饰模式.md
@@ -1,6 +1,6 @@
 动态地给一个对象添加一些额外的职责，就增加功能来说，装饰模式比生成子类更加灵活。
 
-<img src="https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210907204530.png" alt="image-20210907204514381"  />
+<img src="./assets/20210907204530.png" alt="image-20210907204514381"  />
 
 ## 源码
 
@@ -80,7 +80,7 @@ public class ConcreteDecoratorB extends Decorator {
 
 > 咖啡是一种饮料，咖啡店现在要卖各种口味的咖啡，如果不使用装饰模式，那么在销售系统中，各种不一样的咖啡都要产生一个类，如果有4种咖啡豆，5种口味，那么将要产生至少20个类（不包括混合口味），使用装饰模式可以减少类。
 
-![image-20210908100935552](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210908100937.png)
+![image-20210908100935552](./assets/20210908100937.png)
 
 咖啡种类接口：
 
