--- a/设计模式/观察者模式.md
+++ b/设计模式/观察者模式.md
@@ -1,4 +1,4 @@
-![image-20211121152438058](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202111211525335.png)
+![image-20211121152438058](./assets/202111211525335.png)
 
 ### 实例
 
