--- a/设计模式/责任链模式.md
+++ b/设计模式/责任链模式.md
@@ -1,4 +1,4 @@
-![image-20211128212241744](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202111282122970.png)
+![image-20211128212241744](./assets/202111282122970.png)
 
 **抽象类**
 
