--- a/设计模式/原型模式.md
+++ b/设计模式/原型模式.md
@@ -1,6 +1,6 @@
 用原型实例指定创建对象的种类，并通过拷贝这些原型创建新的对象。
 
-![image-20211013160532765](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20211013160534.png)
+![image-20211013160532765](./assets/20211013160534.png)
 
 ## 实例
 
