--- a/设计模式/简单工厂和工厂方法.md
+++ b/设计模式/简单工厂和工厂方法.md
@@ -2,17 +2,17 @@
 
 **工厂方法**：定义一个用户创建对象的接口，让子类去决定实例化哪一个类。工厂方法使一个类的实例化延迟到其子类。
 
-![image-20210912213513906](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210912213515.png)
+![image-20210912213513906](./assets/20210912213515.png)
 
 以下面运算功能的实现为例子：
 
 **工厂方法**
 
-![image-20210912213943284](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210912213945.png)
+![image-20210912213943284](./assets/20210912213945.png)
 
 **简单工厂**
 
-![image-20210912214050041](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/20210912214051.png)
+![image-20210912214050041](./assets/20210912214051.png)
 
 可以看出，**简单工厂模式最大有点在于工厂类中做出了必要的逻辑判断，可以根据客户端的选择条件动态实例化相关的类，对于客户端来说，去除了具体产品的依赖。**就如计算器，让客户端不管使用哪个示例，只要把+给工厂，工厂会自动给出相应的实例，客户端只需要去做运算即可，不同的实例做不同的运算。
 
