--- a/算法笔记/红黑树详解.md
+++ b/算法笔记/红黑树详解.md
@@ -10,17 +10,17 @@
 
 - 性质5.1：如果一个节点存在黑色子节点，那么该节点一定有两个子节点
 
-![image-20210405215250763](https://i.loli.net/2021/04/05/beg9N17lJMozKUQ.png)
+![image-20210405215250763](./assets/beg9N17lJMozKUQ.png)
 
 # 2. 红黑树的自平衡
 
 - **左旋**：以某个结点作为支点(旋转结点)，其**右子结点**变为旋转结点的父结点，**右子结点的左子结点**变为旋转结点的**右子结点**，**左子结点**保持不变。如图3：
 
-![image-20210405215348761](https://i.loli.net/2021/04/05/q8Zvpdwb6tWEBzR.png)
+![image-20210405215348761](./assets/q8Zvpdwb6tWEBzR.png)
 
 - **右旋**：以某个结点作为支点(旋转结点)，其**左子结点**变为旋转结点的父结点，**左子结点的右子结点**变为旋转结点的**左子结点**，**右子结点**保持不变。如图4。
 
-![image-20210405215541157](https://i.loli.net/2021/04/05/atKUYP6cRJLeZuO.png)
+![image-20210405215541157](./assets/atKUYP6cRJLeZuO.png)
 
 - **变色**：结点的颜色由红变黑或由黑变红。
 
@@ -58,7 +58,7 @@
 
 插入位置已经找到，把插入结点放到正确的位置就可以啦，但插入结点是应该是什么颜色呢？答案是**红色**。理由很简单，红色在父结点（如果存在）为黑色结点时，红黑树的黑色平衡没被破坏，不需要做自平衡操作。但如果插入结点是黑色，那么插入位置所在的子树黑色结点总是多1，必须做自平衡。
 
-![image-20210405221428584](https://i.loli.net/2021/04/05/2DpBFhuxT5JAmMc.png)
+![image-20210405221428584](./assets/2DpBFhuxT5JAmMc.png)
 
 ## 插入情景1：红黑树为空树
 
@@ -96,9 +96,9 @@
 - **将PP设置为红色**
 - **把PP设置为当前插入结点**
 
-![image-20210405221635975](https://i.loli.net/2021/04/05/IgCm9OU8SctsZR4.png)
+![image-20210405221635975](./assets/IgCm9OU8SctsZR4.png)
 
-![image-20210405221646435](https://i.loli.net/2021/04/05/qlJen2Q9CZfU6yk.png)
+![image-20210405221646435](./assets/qlJen2Q9CZfU6yk.png)
 
 可以看到，我们把PP结点设为红色了，如果PP的父结点是黑色，那么无需再做任何处理；但如果PP的父结点是红色，根据性质4，此时红黑树已不平衡了，所以还需要把PP当作新的插入结点，继续做插入操作自平衡处理，直到平衡为止。
 
@@ -118,7 +118,7 @@
 - **将PP设为红色**
 - **对PP进行右旋**
 
-![image-20210405221717510](https://i.loli.net/2021/04/05/Ht5Kdcb8EojDO3z.png)
+![image-20210405221717510](./assets/Ht5Kdcb8EojDO3z.png)
 
 由图11可得，左边两个红结点，右边不存在，那么一边一个刚刚好，并且因为为红色，肯定不会破坏树的平衡。
 
@@ -133,7 +133,7 @@
 - **把P设置为插入结点，得到情景4.2.1**
 - **进行情景4.2.1的处理**
 
-![image-20210405221738803](https://i.loli.net/2021/04/05/8BY5OVHPokjC14I.png)
+![image-20210405221738803](./assets/8BY5OVHPokjC14I.png)
 
 **插入情景4.3：叔叔结点不存在或为黑结点，并且插入结点的父亲结点是祖父结点的右子结点**
  该情景对应情景4.2，只是方向反转，不做过多说明了，直接看图。
@@ -145,7 +145,7 @@
 - **将PP设为红色**
 - **对PP进行左旋**
 
-![image-20210405221924516](https://i.loli.net/2021/04/05/xrThs1fbt2IWq6E.png)
+![image-20210405221924516](./assets/xrThs1fbt2IWq6E.png)
 
 **插入情景4.3.2：插入结点是其父结点的左子结点**
 **处理：**
@@ -154,7 +154,7 @@
 - **把P设置为插入结点，得到情景4.3.1**
 - **进行情景4.3.1的处理**
 
-![image-20210405222000297](https://i.loli.net/2021/04/05/vkUCMjOfm7pcNXh.png)
+![image-20210405222000297](./assets/vkUCMjOfm7pcNXh.png)
 
 # 5. 红黑树的删除
 
@@ -170,11 +170,11 @@
 
 补充说明下，情景3的后继结点是大于删除结点的最小结点，也是删除结点的右子树种最左结点。那么可以拿前继结点（删除结点的左子树最右结点）替代吗？可以的。但习惯上大多都是拿后继结点来替代，后文的讲解也是用后继结点来替代。另外告诉大家一种找前继和后继结点的直观的方法（不知为何没人提过，大家都知道？）：**把二叉树所有结点投射在X轴上，所有结点都是从左到右排好序的，所有目标结点的前后结点就是对应前继和后继结点**。如图16所示。
 
-![image-20210405222107739](https://i.loli.net/2021/04/05/JumYIx3LBaR8FGe.png)
+![image-20210405222107739](./assets/JumYIx3LBaR8FGe.png)
 
 接下来，讲一个重要的思路：**删除结点被替代后，在不考虑结点的键值的情况下，对于树来说，可以认为删除的是替代结点！**话很苍白，我们看图17。在不看键值对的情况下，图17的红黑树最终结果是删除了Q所在位置的结点！这种思路非常重要，大大简化了后文讲解红黑树删除的情景！
 
-![image-20210405222125858](https://i.loli.net/2021/04/05/e8KRHCf9m7LYi3t.png)
+![image-20210405222125858](./assets/e8KRHCf9m7LYi3t.png)
 
 基于此，上面所说的3种二叉树的删除情景可以相互转换并且最终都是转换为情景1！
 
@@ -183,17 +183,17 @@
 
 二叉树删除结点情景关系图如图18所示。
 
-![image-20210405222153108](https://i.loli.net/2021/04/05/TPkGjiuqgF6atEA.png)
+![image-20210405222153108](./assets/TPkGjiuqgF6atEA.png)
 
 综上所述，**删除操作删除的结点可以看作删除替代结点，而替代结点最后总是在树末。**有了这结论，我们讨论的删除红黑树的情景就少了很多，因为我们只考虑删除树末结点的情景了。
 
 同样的，我们也是先来总体看下删除操作的所有情景，如图19所示。
 
-![image-20210405222242793](https://i.loli.net/2021/04/05/9tbEl5jBLOy6Sg3.png)
+![image-20210405222242793](./assets/9tbEl5jBLOy6Sg3.png)
 
 即使简化了还是有9种情景！但跟插入操作一样，存在左右对称的情景，只是方向变了，没有本质区别。同样的，我们还是来约定下，如图20所示。
 
-![image-20210405222307463](https://i.loli.net/2021/04/05/I1mq6oOftJCbGFN.png)
+![image-20210405222307463](./assets/I1mq6oOftJCbGFN.png)
 
 图20的字母并不代表结点Key的大小。R表示替代结点，P表示替代结点的父结点，S表示替代结点的兄弟结点，SL表示兄弟结点的左子结点，SR表示兄弟结点的右子结点。灰色结点表示它可以是红色也可以是黑色。
 
@@ -222,7 +222,7 @@
 - **对P进行左旋，得到情景2.1.2.3**
 - **进行情景2.1.2.3的处理**
 
-![image-20210405222346902](https://i.loli.net/2021/04/05/apjroxZ3KIUClhg.png)
+![image-20210405222346902](./assets/apjroxZ3KIUClhg.png)
 
 **删除情景2.1.2：替换结点的兄弟结点是黑结点**
  当兄弟结点为黑时，其父结点和子结点的具体颜色也无法确定（如果也不考虑自底向上的情况，子结点非红即为叶子结点Nil，Nil结点为黑结点），此时又得考虑多种子情景。
@@ -239,7 +239,7 @@
 
 
 
-![image-20210405222406585](https://i.loli.net/2021/04/05/La3owG49dx2SWQv.png)
+![image-20210405222406585](./assets/La3owG49dx2SWQv.png)
 
 平衡后的图怎么不满足红黑树的性质？前文提醒过，R是即将替换的，它还参与树的自平衡，平衡后再替换到删除结点的位置，所以R最终可以看作是删除的。另外图2.1.2.1是考虑到第一次替换和自底向上处理的情况，如果只考虑第一次替换的情况，根据红黑树性质，SL肯定是红色或为Nil，所以最终结果树是平衡的。如果是自底向上处理的情况，同样，每棵子树都保持平衡状态，最终整棵树肯定是平衡的。后续的情景同理，不做过多说明了。
 
@@ -253,7 +253,7 @@
 - **对S进行右旋，得到情景2.1.2.1**
 - **进行情景2.1.2.1的处理**
 
-![image-20210405222429123](https://i.loli.net/2021/04/05/X5Atoe1S6Rkcjzn.png)
+![image-20210405222429123](./assets/X5Atoe1S6Rkcjzn.png)
 
 **删除情景2.1.2.3：替换结点的兄弟结点的子结点都为黑结点**
  好了，此次兄弟子树都没红结点“借”了，兄弟帮忙不了，找父母呗，这种情景我们把兄弟结点设为红色，再把父结点当作替代结点，自底向上处理，去找父结点的兄弟结点去“借”。但为什么需要把兄弟结点设为红色呢？显然是为了在P所在的子树中保证平衡（R即将删除，少了一个黑色结点，子树也需要少一个），后续的平衡工作交给父辈们考虑了，还是那句，当每棵子树都保持平衡时，最终整棵总是平衡的。
@@ -264,7 +264,7 @@
 - **把P作为新的替换结点**
 - **重新进行删除结点情景处理**
 
-![image-20210405222449127](https://i.loli.net/2021/04/05/xfmP9blEQG4trZq.png)
+![image-20210405222449127](./assets/xfmP9blEQG4trZq.png)
 
 **删除情景2.2：替换结点是其父结点的右子结点**
  好啦，右边的操作也是方向相反，不做过多说明了，相信理解了删除情景2.1后，肯定可以理解2.2。
@@ -277,7 +277,7 @@
 - **对P进行右旋，得到情景2.2.2.3**
 - **进行情景2.2.2.3的处理**
 
-![image-20210405222508495](https://i.loli.net/2021/04/05/4vSF3BWRa6fgGyA.png)
+![image-20210405222508495](./assets/4vSF3BWRa6fgGyA.png)
 
 **删除情景2.2.2：替换结点的兄弟结点是黑结点**
  **删除情景2.2.2.1：替换结点的兄弟结点的左子结点是红结点，右子结点任意颜色**
@@ -288,7 +288,7 @@
 - **将SL设为黑色**
 - **对P进行右旋**
 
-![image-20210405222534331](https://i.loli.net/2021/04/05/2cBEK39JLNkDIA6.png)
+![image-20210405222534331](./assets/2cBEK39JLNkDIA6.png)
 
 **删除情景2.2.2.2：替换结点的兄弟结点的左子结点为黑结点，右子结点为红结点**
 **处理：**
@@ -298,7 +298,7 @@
 - **对S进行左旋，得到情景2.2.2.1**
 - **进行情景2.2.2.1的处理**
 
-![image-20210405222551805](https://i.loli.net/2021/04/05/Bj1dgVAuEyYMoSR.png)
+![image-20210405222551805](./assets/Bj1dgVAuEyYMoSR.png)
 
 **删除情景2.2.2.3：替换结点的兄弟结点的子结点都为黑结点**
 **处理：**
@@ -307,7 +307,7 @@
 - **把P作为新的替换结点**
 - **重新进行删除结点情景处理**
 
-![image-20210405222621855](https://i.loli.net/2021/04/05/iqSjXkeQDZVEGvw.png)
+![image-20210405222621855](./assets/iqSjXkeQDZVEGvw.png)
 
 综上，红黑树删除后自平衡的处理可以总结为：
 
