--- a/算法笔记/常用算法积累.md
+++ b/算法笔记/常用算法积累.md
@@ -7,7 +7,7 @@
 - **时间复杂度：** 一个算法执行所耗费的时间。
 - **空间复杂度**：运行完一个程序所需内存的大小。
 
-![img](https://i.loli.net/2021/03/15/gvDndMyEKpV7bZ6.png)
+![img](./assets/gvDndMyEKpV7bZ6.png)
 
 **图片名词解释：**
 
@@ -16,7 +16,7 @@
 - `In-place`: 占用常数内存，不占用额外内存
 - `Out-place`: 占用额外内存
 
-![img](https://i.loli.net/2021/03/15/rvuB1ze5aZTnCm3.jpg)
+![img](./assets/rvuB1ze5aZTnCm3.jpg)
 
 # 2. 冒泡排序
 
@@ -162,7 +162,7 @@ public static int[] insertSort(int[] arr) {
 2. 按增量序列个数k，对序列进行k 趟排序；
 3. 每趟排序，根据对应的增量ti，将待排序列分割成若干长度为m 的子序列，分别对各子表进行直接插入排序。仅增量因子为1 时，整个序列作为一个表来处理，表长度即为整个序列的长度。
 
-![img](https://i.loli.net/2021/03/16/PwUdblX7tI5zao2.png)
+![img](./assets/PwUdblX7tI5zao2.png)
 
 ## 5.2 代码实现
 
@@ -457,7 +457,7 @@ public static int[] countSort(int[] arr) {
 
 **注意，如果递归使用桶排序为各个桶排序，则当桶数量为1时要手动减小BucketSize增加下一循环桶的数量，否则会陷入死循环，导致内存溢出。**
 
-![img](https://i.loli.net/2021/03/16/yR84kOxCY3oDWam.png)
+![img](./assets/yR84kOxCY3oDWam.png)
 
 ## 10.2 代码实现
 
