--- a/Java/java-basic/设计模式之工厂模式.md
+++ b/Java/java-basic/设计模式之工厂模式.md
@@ -2,7 +2,7 @@
 
 该模式通过向工厂传递类型来指定要创建的对象。
 
-![image-20210422162015551](https://i.loli.net/2021/04/22/CgjyscAI6mO4pXM.png)
+![image-20210422162015551](./assets/CgjyscAI6mO4pXM.png)
 
 下面我们使用手机生产来讲解该模式：
 
@@ -76,7 +76,7 @@ public class Demo {
 
 和简单工厂模式中工厂负责生产所有产品相比，工厂方法模式将生成具体产品的任务分发给具体的产品工厂。
 
-![image-20210422163405122](https://i.loli.net/2021/04/22/Qt5fpg9lhbAKwTN.png)
+![image-20210422163405122](./assets/Qt5fpg9lhbAKwTN.png)
 
 其中和产品相关的Phone类、MiPhone类和IPhone类的定义不变。
 
@@ -131,7 +131,7 @@ public class Demo {
 
 抽象工厂模式通过在AbstarctFactory中增加创建产品的接口，并在具体子工厂中实现新加产品的创建，当然前提是子工厂支持生产该产品。否则继承的这个接口可以什么也不干。
 
-![image-20210422165437826](https://i.loli.net/2021/04/22/QYmjuHkr4lfqGNO.png)
+![image-20210422165437826](./assets/QYmjuHkr4lfqGNO.png)
 
 从上面类图结构中可以清楚的看到如何在工厂方法模式中通过增加新产品接口来实现产品的增加的。
 
@@ -139,7 +139,7 @@ public class Demo {
 
 为了弄清楚上面的结构，我们使用具体的产品和工厂来表示上面的UML类图，能更加清晰的看出模式是如何演变的：
 
-![image-20210422165546327](https://i.loli.net/2021/04/22/cBZbftWDuV7UKXy.png)
+![image-20210422165546327](./assets/cBZbftWDuV7UKXy.png)
 
 **PC类**：定义PC产品的接口(AbstractPC)
 
