--- a/Netty/粘包和拆包.md
+++ b/Netty/粘包和拆包.md
@@ -8,7 +8,7 @@ Netty接收端可能会遇到一下几种情况：
 
 粘包和半包可统称为**半包问题**
 
-![image-20220526113832153](https://raw.githubusercontent.com/Floweryu/typora-img/main/img/202205261138970.png)
+![image-20220526113832153](./assets/202205261138970.png)
 
 ## 半包的原理
 
