--- a/Work/备忘录.md
+++ b/Work/备忘录.md
@@ -8,3 +8,9 @@ python -m SimpleHTTPServer 8999
 # 获取服务器ip+8999进入
 ```
 
+### 输出堆栈信息
+
+```bash
+jmap -dump:format=b,file=/home/work/log/heap.hprof 141  // 141是进程号
+```
+
