--- a/算法笔记/二分查找专题.md
+++ b/算法笔记/二分查找专题.md
@@ -116,12 +116,12 @@ public int[] mergeSort(int[] nums1, int[] nums2) {
 
 ### 题解：二分查找分别寻找最左边界和最右边界
 
-#### **思路**：
+**思路**：
 
 1. 二分查找可以寻找最左边界和最右边界
 2. 找到边界后需要判断边界是否合法
 
-#### 普通代码结构
+**普通代码结构**
 
 ```java
 public int[] searchRange(int[] nums, int target) {
@@ -161,7 +161,7 @@ public int[] searchRange(int[] nums, int target) {
 }
 ```
 
-#### **优化代码结构**：
+**优化代码结构**：
 
 ```java
 class Solution {
@@ -194,7 +194,7 @@ class Solution {
 
 ```
 
-#### 参考文章：
+### 参考文章：
 
 - 二分查找算法的几种情况：https://floweryu.blog.csdn.net/article/details/112378419
 
@@ -218,7 +218,7 @@ class Solution {
 
 ### 题解：二分寻找目标值最左边界
 
-#### 思路：
+**思路**：
 
 返回将要被插入的位置，其实就是寻找到target的最左边界, 找到最接近小于target的值的位置
 
@@ -258,7 +258,7 @@ public int searchInsert(int[] nums, int target) {
 
 详情可见：[剑指Offer.04 二维数组中的查找](https://leetcode.cn/problems/er-wei-shu-zu-zhong-de-cha-zhao-lcof/?favorite=xb9nqhhg)
 
-#### 思路：
+思路：
 
  * 以矩阵左下角位置tmp为观察点: 小于tmp的元素都在tmp所在行之上, 大于tmp的元素都在tmp所在列向右
  * 所以, 每次比较tmp和target的值, 然后舍弃行列即可, 规则如下：
