--- a/算法笔记/二分查找专题.md
+++ b/算法笔记/二分查找专题.md
@@ -238,7 +238,7 @@ public int searchInsert(int[] nums, int target) {
 }
 ```
 
-## 二分74：搜索二维矩阵
+## 二分74. 搜索二维矩阵
 
 > https://leetcode.cn/problems/search-a-2d-matrix/
 >
@@ -258,12 +258,13 @@ public int searchInsert(int[] nums, int target) {
 
 详情可见：[剑指Offer.04 二维数组中的查找](https://leetcode.cn/problems/er-wei-shu-zu-zhong-de-cha-zhao-lcof/?favorite=xb9nqhhg)
 
-思路：
+**思路**：
 
- * 以矩阵左下角位置tmp为观察点: 小于tmp的元素都在tmp所在行之上, 大于tmp的元素都在tmp所在列向右
- * 所以, 每次比较tmp和target的值, 然后舍弃行列即可, 规则如下：
- * 1. 若target > tmp, 则说明tmp该列向左的元素都小于target, 所以舍弃该列，即j++
- * 2. 若target < tmp, 则说明target在tmp所在行之上，所以舍弃该行，即i--
+* 以矩阵左下角位置`tmp`为观察点: 小于`tmp`的元素都在`tmp`所在行之上, 大于`tmp`的元素都在`tmp`所在列向右
+* 所以, 每次比较`tmp`和`target`的值, 然后舍弃行列即可, 规则如下：
+  * 若`target > tmp`, 则说明`tmp`该列向左的元素都小于`target`, 所以舍弃该列，即`j++`
+  * 若`target < tmp`, 则说明`target`在`tmp`所在行之上，所以舍弃该行，即`i--`
+
 
 ```java
 public boolean searchMatrix(int[][] matrix, int target) {
@@ -279,6 +280,56 @@ public boolean searchMatrix(int[][] matrix, int target) {
         }
     }
     return false;
+}
+```
+
+## 二分162. 寻找峰值
+
+> https://leetcode.cn/problems/find-peak-element/description/
+>
+> 峰值元素是指其值严格大于左右相邻值的元素。
+>
+> 给你一个整数数组 `nums`，找到峰值元素并返回其索引。数组可能包含多个峰值，在这种情况下，返回 **任何一个峰值** 所在位置即可。
+>
+> 你可以假设 `nums[-1] = nums[n] = -∞` 。
+>
+> 你必须实现时间复杂度为 `O(log n)` 的算法来解决此问题。
+>
+> ```
+> 输入：nums = [1,2,3,1]
+> 输出：2
+> 解释：3 是峰值元素，你的函数应该返回其索引 2。
+> ```
+>
+> ```
+> 输入：nums = [1,2,1,3,5,6,4]
+> 输出：1 或 5 
+> 解释：你的函数可以返回索引 1，其峰值元素为 2；
+>      或者返回索引 5， 其峰值元素为 6。
+> ```
+
+**思路**
+
+1. 由于是严格递增的，所以二分时只需要判断`nums[mid] > nums[mid + 1]`即可。
+2. 由于需要将`mid`和`mid + 1`进行比较，所以`while`条件必须是`left < right`，如果是`left <= right`，则在一个元素时，会数组越界。
+3. `right`的初始化条件不能用`nums.lenght`，当只有一个元素时，是需要结束`while`循环的，所以当只有一个元素时，`left`和`right`必须相等。
+4. 由于`nums[nums.length]=负无穷`，所以二分查找大的那一半一定存在峰值。
+
+```java
+public int findPeakElement(int[] nums) {
+    int left = 0;
+    // 这里必须使用nums.length - 1, 因为只有一个元素时, left等于right直接返回
+    int right = nums.length - 1;
+    // 这里必须是 < , 如果是<=, 则下面mid会越界
+    while (left < right) {
+        int mid = (left + right) / 2;
+        if (nums[mid] > nums[mid + 1]) {
+            right = mid;
+        } else {
+            left = mid + 1;
+        }
+    }
+    return right;
 }
 ```
 
