--- a/Work/备忘录.md
+++ b/Work/备忘录.md
@@ -11,6 +11,20 @@ python -m SimpleHTTPServer 8999
 ### 输出堆栈信息
 
 ```bash
-jmap -dump:format=b,file=/home/work/log/heap.hprof 141  // 141是进程号
+# 141是进程号
+jmap -dump:format=b,file=/home/work/log/heap.hprof {pid}
+```
+
+### 常用Linux命令
+
+```bash
+# 查看内存占用端口
+ss -lnt 
+# 查看端口占用pid
+lsof -i:7301 
+# 找到对应服务
+ps -ef | grep {pid} 
+# 查看磁盘存储空间
+du -sh *
 ```
 
