--- a/算法笔记/链表专题.md
+++ b/算法笔记/链表专题.md
@@ -113,7 +113,12 @@ class Solution {
 **思路**：
 
 - 初始需要两个变量`pre`和`end`：`pre`记录每次需要反转链表的前一个节点，`end`记录每次反转链表的尾结点。
-- 
+- 每次寻找k个节点，`end`指向每次反转链表的尾结点。如果`end`为`null`，说明不足k个。
+- `next`指向`end.next`：目的是为了反转后将链表接回到原链表。
+- `end.next = null`：每次反转前要断开与原链表的联系。
+- `start`指向反转链表头结点：目的是为了反转链表和将反转链表链接回原链表。
+- 一次反转后，连接反转链表注意：原来的`next`变成了头结点；原来的`start`变成了尾结点。
+- 一次反转后，`pre`和`end`指向`start`，即下一次反转链表的前一个节点。
 
 ```java
 class Solution {
@@ -156,6 +161,7 @@ class Solution {
         return dummy.next;
     }
     
+    // 要求背诵
     public ListNode reverse(ListNode head) {
         ListNode cur = head;
         ListNode pre = null;
