--- a/算法笔记/链表专题.md
+++ b/算法笔记/链表专题.md
@@ -14,7 +14,7 @@
 > 输出：[5]
 > ```
 
-### 题解：穿针引线
+#### 题解：穿针引线
 
 思路很简单，分两步：
 
@@ -108,7 +108,7 @@ class Solution {
 > 输出：[3,2,1,4,5]
 > ```
 
-### 题解：寻找区间后反转区间链表
+#### 题解：寻找区间后反转区间链表
 
 **思路**：
 
@@ -172,6 +172,61 @@ class Solution {
             cur = next;
         }
         return pre;
+    }
+}
+```
+
+## 剑指 Offer 25. 合并两个排序的链表
+
+> https://leetcode.cn/problems/he-bing-liang-ge-pai-xu-de-lian-biao-lcof/description/
+>
+> 输入两个递增排序的链表，合并这两个链表并使新链表中的节点仍然是递增排序的。
+>
+> ```
+> 输入：1->2->4, 1->3->4
+> 输出：1->1->2->3->4->4
+> ```
+
+#### 题解：归并排序思路
+
+构造一个额外链表，每次比较后将较小值赋值给新链表。最后将剩余链表接上即可。
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
+        ListNode dummy = new ListNode(-1);
+        ListNode cur1 = l1, cur2 = l2, cur = dummy;
+        while (cur1 != null && cur2 != null) {
+            if (cur1.val < cur2.val) {
+                cur.next = new ListNode(cur1.val);
+                cur1 = cur1.next;
+            } else {
+                cur.next = new ListNode(cur2.val);
+                cur2 = cur2.next;
+            }
+            cur = cur.next;
+        }
+        
+        while (cur1 != null) {
+            cur.next = cur1;
+            cur1 = cur1.next;
+            cur = cur.next;
+        }
+
+        while (cur2 != null) {
+            cur.next = cur2;
+            cur2 = cur2.next;
+            cur = cur.next;
+        }
+        return dummy.next;
     }
 }
 ```
