--- a/算法笔记/链表专题.md
+++ b/算法笔记/链表专题.md
@@ -189,7 +189,7 @@ class Solution {
 
 #### 题解：归并排序思路
 
-构造一个额外链表，每次比较后将较小值赋值给新链表。最后将剩余链表接上即可。
+设置一个虚拟头结点，遍历比较两个链表，最后记得将剩余链表直接添加上去。
 
 ```java
 /**
@@ -226,6 +226,144 @@ class Solution {
             cur2 = cur2.next;
             cur = cur.next;
         }
+        return dummy.next;
+    }
+}
+```
+
+## 剑指 Offer II 078. 合并排序链表
+
+> https://leetcode.cn/problems/vvXgSW/description/
+>
+> 给定一个链表数组，每个链表都已经按升序排列。
+>
+> 请将所有链表合并到一个升序链表中，返回合并后的链表。
+>
+> ```
+> 输入：lists = [[1,4,5],[1,3,4],[2,6]]
+> 输出：[1,1,2,3,4,4,5,6]
+> 解释：链表数组如下：
+> [
+>   1->4->5,
+>   1->3->4,
+>   2->6
+> ]
+> 将它们合并到一个有序链表中得到。
+> 1->1->2->3->4->4->5->6
+> ```
+>
+> ```
+> 输入：lists = []
+> 输出：[]
+> ```
+>
+> ```
+> 输入：lists = [[]]
+> 输出：[]
+> ```
+
+#### 题解一：遍历+两个有序链表合并
+
+- 已经有两个有序链表合并的算法，所以直接遍历这个链表数组进行合并即可。
+- 初始化一个空链表，让它与第一个链表合并。
+
+```java
+class Solution {
+    public ListNode mergeKLists(ListNode[] lists) {
+        // 初始化一个空链表，用来和第一个链表合并
+        ListNode ans = null;
+        for (ListNode list : lists) {
+            // 用每次合并后的链表去和下一个链表合并
+            ans = mergTwoList(ans, list);
+        }
+        return ans;
+    }
+
+    // 合并两个有序链表
+    private ListNode mergTwoList(ListNode a, ListNode b) {
+        if (a == null || b == null) {
+            return a == null ? b : a;
+        }
+
+        ListNode dummy = new ListNode(-1);
+        ListNode head = dummy;
+        while (a != null && b != null) {
+            if (a.val < b.val) {
+                head.next = a;
+                a = a.next;
+            } else {
+                head.next = b;
+                b = b.next;
+            }
+            head = head.next;
+        }
+        // 注意这里处理，直接将剩余链表连接即可
+        head.next = a == null ? b : a;
+        return dummy.next;
+    }
+}
+```
+
+#### 题解二：归并
+
+- 既然每个数组都是有序，那自然可以想到归并的思路来解。
+- 归并排序到最后也是合并两个链表，所以核心算法还是合并两个有序链表（已有）
+- 分而治之：考虑将k个链表配对，每两个合并，这就使用到递归分治。
+- 递归退出的条件：参考归并排序
+  - 当`left < right`：继续递归。
+  - 当`left > right`：范围不对，直接返回`null`。
+  - 当`left == right`： 说明两个链表一样，此时直接返回任意一个即可。
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    public ListNode mergeKLists(ListNode[] lists) {
+        return mergeSort(lists, 0, lists.length - 1);
+    }
+
+    public ListNode mergeSort(ListNode[] list, int i, int j) {
+        // 边界出错，直接返回null
+        if (i > j) {
+            return null;
+        }
+        // 两个链表一样，此时直接返回任意一个即可
+        if (i == j) {
+            return list[i];
+        }
+        int mid = (i + j) / 2;
+        ListNode l1 = mergeSort(list, i, mid);
+        ListNode l2 = mergeSort(list, mid + 1, j);
+        // 两两合并
+        return mergeTwoList(l1, l2);
+    }
+
+    public ListNode mergeTwoList(ListNode a, ListNode b) {
+        if (a == null || b == null) {
+            return a == null ? b : a;
+        }
+
+        ListNode dummy = new ListNode(-1);
+        ListNode head = dummy;
+        while (a != null && b != null) {
+            if (a.val < b.val) {
+                head.next = a;
+                a = a.next;
+            } else {
+                head.next = b;
+                b = b.next;
+            }
+            head = head.next;
+        }
+        head.next = a == null ? b : a;
         return dummy.next;
     }
 }
