--- a/算法笔记/链表专题.md
+++ b/算法笔记/链表专题.md
@@ -369,3 +369,151 @@ class Solution {
 }
 ```
 
+## 剑指 Offer II 022. 链表中环的入口节点
+
+> https://leetcode.cn/problems/c32eOV/description/
+>
+> 给定一个链表，返回链表开始入环的第一个节点。 从链表的头节点开始沿着 `next` 指针进入环的第一个节点为环的入口节点。如果链表无环，则返回 `null`。
+>
+> 为了表示给定链表中的环，我们使用整数 `pos` 来表示链表尾连接到链表中的位置（索引从 0 开始）。 如果 `pos` 是 `-1`，则在该链表中没有环。**注意，`pos` 仅仅是用于标识环的情况，并不会作为参数传递到函数中。**
+>
+> **说明：**不允许修改给定的链表。
+>
+> ![image-20230406224639579](./assets/image-20230406224639579.png)
+>
+> 
+
+#### 题解：快慢指针
+
+快慢指针找到相遇位置并且同时能够判断是否有环。
+
+**关键点**： 在相等节点处, 相遇指针继续向下走的距离就等于起始指针走到环入口的距离。
+
+```java
+/**
+ * Definition for singly-linked list.
+ * class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode(int x) {
+ *         val = x;
+ *         next = null;
+ *     }
+ * }
+ */
+public class Solution {
+    public ListNode detectCycle(ListNode head) {
+        // 定义一个快慢指针
+        ListNode fast = head, slow = head;
+        // 遇到节点为空说明没有环
+        while (fast != null && fast.next != null) {
+            // 快指针每次走两步
+            fast = fast.next.next;
+            // 慢指针每次走一步
+            slow = slow.next;
+            // 如果两个指针相等，说明有环
+            if (fast == slow) {
+                // 在相等节点处, 相遇指针继续向下走的距离就等于起始指针走到环入口的距离
+                ListNode res = head;
+                while (res != slow) {
+                    res = res.next;
+                    slow = slow.next;
+                }
+                return res;
+            }
+        }
+        return null;
+    }
+}
+```
+
+## 剑指 Offer 22. 链表中倒数第k个节点
+
+> https://leetcode.cn/problems/lian-biao-zhong-dao-shu-di-kge-jie-dian-lcof/description/
+>
+> 输入一个链表，输出该链表中倒数第k个节点。为了符合大多数人的习惯，本题从1开始计数，即链表的尾节点是倒数第1个节点。
+>
+> 例如，一个链表有 `6` 个节点，从头节点开始，它们的值依次是 `1、2、3、4、5、6`。这个链表的倒数第 `3` 个节点是值为 `4` 的节点。
+>
+> ```
+> 给定一个链表: 1->2->3->4->5, 和 k = 2.
+> 
+> 返回链表 4->5.
+> ```
+
+#### 题解：遍历
+
+先求链表长度，然后再计算走到k需要几步
+
+```java
+class Solution {
+    public ListNode getKthFromEnd(ListNode head, int k) {
+        ListNode cur = head;
+        // 先求链表长度, 这里是0，因为结束条件是cur!=null, 会多遍历一次
+        int len = 0;
+        while (cur != null) {
+            cur = cur.next;
+            len++;
+        }
+        cur = head;
+        // 计算从头到k需要走几步: len - k
+        for (int i = 1; i <= len - k; i++) {
+            cur = cur.next;
+        }
+        return cur;
+    }
+}
+```
+
+## 剑指 Offer II 021. 删除链表的倒数第 n 个结点
+
+> https://leetcode.cn/problems/SLwz0R/description/
+>
+> 给定一个链表，删除链表的倒数第 `n` 个结点，并且返回链表的头结点。
+>
+> ```
+> 输入：head = [1,2,3,4,5], n = 2
+> 输出：[1,2,3,5]
+> 
+> 输入：head = [1], n = 1
+> 输出：[]
+> 
+> 输入：head = [1,2], n = 1
+> 输出：[1]
+> ```
+
+#### 题解：寻找待删除节点的前一个节点
+
+- 链表删除节点，必须之前待删除节点的前一个节点。
+- 删除节点操作：`pre.next = cur.next;`注意判空。
+- 为了方便处理一个节点和空链表的情况，初始化一个虚拟节点作为`pre`。
+
+```java
+class Solution {
+    public ListNode removeNthFromEnd(ListNode head, int n) {
+        ListNode cur = head;
+        int len = 0;
+        while (cur != null) {
+            cur = cur.next;
+            len++;
+        }
+
+        // 方便处理一个节点的情况
+        ListNode dumy = new ListNode(-1);
+        dumy.next = head;
+        ListNode pre = dumy;
+        // 寻找到要删除节点的前一个节点
+        for (int i = 1; i <= len - n; i++) {
+            pre = pre.next;
+        }
+        // 得到要删除的节点
+        cur = pre.next;
+        // 这里需要判空
+        if (cur != null) {
+            pre.next = cur.next;
+        }
+        return dumy.next;
+    }
+}
+```
+
