--- a/算法笔记/链表专题.md
+++ b/算法笔记/链表专题.md
@@ -517,3 +517,57 @@ class Solution {
 }
 ```
 
+## 剑指 Offer 52. 两个链表的第一个公共节点
+
+> https://leetcode.cn/problems/liang-ge-lian-biao-de-di-yi-ge-gong-gong-jie-dian-lcof/description/
+>
+> 输入两个链表，找出它们的第一个公共节点。
+>
+> ![image-20230418232817164](./assets/image-20230418232817164.png)
+>
+> ```
+> 输入：intersectVal = 8, listA = [4,1,8,4,5], listB = [5,0,1,8,4,5], skipA = 2, skipB = 3
+> 输出：Reference of the node with value = 8
+> 输入解释：相交节点的值为 8 （注意，如果两个列表相交则不能为 0）。从各自的表头开始算起，链表 A 为 [4,1,8,4,5]，链表 B 为 [5,0,1,8,4,5]。在 A 中，相交节点前有 2 个节点；在 B 中，相交节点前有 3 个节点。
+> ```
+>
+> ![image-20230418232839444](./assets/image-20230418232839444.png)
+>
+> ```
+> 输入：intersectVal = 0, listA = [2,6,4], listB = [1,5], skipA = 3, skipB = 2
+> 输出：null
+> 输入解释：从各自的表头开始算起，链表 A 为 [2,6,4]，链表 B 为 [1,5]。由于这两个链表不相交，所以 intersectVal 必须为 0，而 skipA 和 skipB 可以是任意值。
+> 解释：这两个链表不相交，因此返回 null。
+> ```
+>
+> **注意：**
+>
+> - 如果两个链表没有交点，返回 `null`.
+> - 在返回结果后，两个链表仍须保持原有的结构。
+> - 可假定整个链表结构中没有循环。
+> - 程序尽量满足 O(*n*) 时间复杂度，且仅用 O(*1*) 内存。
+> - 本题与主站 160 题相同：https://leetcode-cn.com/problems/intersection-of-two-linked-lists/
+
+ 
+
+#### 题解：双指针
+
+```java
+ListNode getIntersectionNode(ListNode headA, ListNode headB) {
+    ListNode pA = headA, pB = headB;
+    while (pA != pB) {
+        // 这里如果对pA.next进行判空，就会进入无限循环出不来
+        // 假设链表如下：
+        // 1 -> 3 -> 5 -> null
+        //      2 -> 4 -> null
+        // 如果对pA.next判空，则每次指针到5或4都会跳转到2或1,
+        // 但如果对pA本身判空，则总会存在一个null相等跳出循环
+        // pA = pA.next == null ? headB : pA.next;
+        // pB = pB.next == null ? headA : pB.next;
+        pA = pA == null ? headB : pA.next;
+        pB = pB == null ? headA : pB.next;
+    }
+    return pA;
+}
+```
+
